--- a/port.html
+++ b/port.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="photos/aboutphoto.jpg">
+                        <img src="Portfolio/aboutphoto.jpg">
                     </div>
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="resume-list">
                     <div>
-                        <a href="file:///C:/Users/HP/Downloads/Resume.pdf">Here Is My Resume </a>
+                        <a href="Portfolio/Resume.pdf">Here Is My Resume </a>
                     </div>
                 </div>
             </div>
